fix(question)::bug:fix the question update bug